[metadata]
name = ptt-article-parser
version = attr: ptt_article_parser.__pkginfo__.__version__
description = A renaming tool for PTT articles
author = eight
author_email = eight04@gmail.com

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Environment :: Win32 (MS Windows)
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Natural Language :: Chinese (Traditional)
	Operating System :: Microsoft :: Windows :: Windows 7
	Programming Language :: Python :: 3.5
	Topic :: Terminals
	
keywords = ptt, article, parser
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/ptt-article-parser

[options]
zip_safe = True
packages = find:

install_requires =
	docopt~=0.6.2
	safeprint~=0.2.0
	
[options.entry_points]
console_scripts = 
	pap = ptt_article_parser.__main__:main
